--- a/style.css
+++ b/style.css
@@ -1,40 +1,33 @@
-.wrapper {
+.main {
    display: flex;
-   margin: 15px;
-   justify-content: space-around;
-}
-
-.wrapper2 {
-   display: flex;
-   width: 405px;
+   gap: 2%;
    justify-content: space-between;
-
+   height: 98vh;
+   align-items: center;
 }
 
-.d1 {
-   width: 100px;
-   height: 100px;
-   border: 1px solid;
-   background: yellow;
+.main .letter {
+   width: 15%;
 }
 
-.d2 {
-   width: 100px;
-   height: 100px;
-   border: 1px solid;
-   background: rgb(4, 255, 0);
+.main .letter .row {
+   display: flex;
+   justify-content: center;
 }
 
-.d3 {
-   width: 100px;
-   height: 100px;
-   border: 1px solid;
-   background: rgb(153, 0, 255);
+.main .letter .row .cell {
+   width: 25%;
+   border: 1px solid transparent;
+   box-sizing: border-box;
 }
 
-.d4 {
-   width: 100px;
-   height: 100px;
-   border: 1px solid;
-   background: rgb(228, 42, 13);
+.main .letter .row .cell:after {
+   content: '';
+   display: block;
+   padding-top: 100%;
+}
+
+.main .letter .row .cell.filled {
+   border-color: black;
+   background: rgb(88, 170, 6);
 }
